# AdventofCode

./: .gitignore  README.md
.cache/clangd/index/: BoundingBox.h.12A37CFBD4AC8018.idx  Box.cpp.488E924A3FE3745D.idx  Box.h.350D68E61ECEA83F.idx  Direction.h.B8306D4DECCDC058.idx  Entity.h.D6679CD018CE5956.idx  Robot.cpp.DDA7FB595BF14616.idx  Robot.h.C976224E658A54E6.idx  Wall.cpp.0574DDC28CEEF2CE.idx  Wall.h.1528D12225566798.idx
1/src/: main.cpp
12/Part1Tests/: CMakeLists.txt
12/Part1Tests/test/: hash_test.cpp
12/Part2/: CMakeLists.txt
13/part1/src/: main.cpp
13/part2/: test.py
14/: CMakeLists.txt
14/src/: Robot.h  main.cpp
15/: CMakeLists.txt
15/src/: Direction.h  Entity.h  main.cpp
15p2/src/: BoundingBox.h  Box.cpp  Box.h  Direction.h  Entity.cpp  Entity.h  Robot.cpp  Robot.h  main.cpp
15p2v2/src/: main.cpp
16/part1/src/: main.cpp
17/: CMakeLists.txt
17/src/: vs.cpp
19/part2/src/: main.cpp
19/src/: main.cpp
2/src/: main.cpp  main_attempt.cpp  main_old.cpp
20/p1/src/: main.cpp
20/p2/src/: main.cpp
2023/1/p1/: main.c
2023/1/p2/: Makefile  alpha_number_tree.c  alpha_number_tree.h  main.c
2023/10/p1/: main.c
2023/10/p2/: README.md  dynamic_list.c  dynamic_list.h  main.c  queue.c  queue.h
2023/11/p1/: main.c
2023/11/p2/: main.c
2023/12/p1/: README.md  main.c  springhash.h  stringline.h
2023/12/p2/: README.md
2023/2/p1/: main.c
2023/2/p2/: main.c
2023/3/p1/: main.c  main_old.c
2023/3/p2/: main.c
2023/4/p1/: main.c
2023/4/p2/: main.c
2023/5/p1/: main.c
2023/5/p2/: README.md  main.c
2023/6/p1/: main.c
2023/6/p2/: main.c
2023/7/p1/: README.md  main.c
2023/7/p2/: README.md  main.c
2023/8/p1/: main.c
2023/8/p2/: lcm.c  main.c  main2.c  main_one_loop.c  translated_test.txt
2023/9/p1/: main.c
2023/9/p2/: main.c
2024/10/part1/: CMakelists.txt
2024/11/src/: main.cpp
2024/12/: CMakeLists.txt
2024/12/Part1/: CMakeLists.txt
2024/12/Part1/src/: main.cpp  main_wrong.cpp
2024/12/Part2/src/: main.cpp
2024/13/part2/: CMakeLists.txt
2024/14/src/: Robot.cpp
2024/15/src/: Robot.cpp  Robot.h
2024/15p2/: CMakeLists.txt
2024/15p2/src/: Direction.h  Robot.cpp  Wall.cpp  Wall.h  main.cpp
2024/15p2v2/: CMakeLists.txt
2024/17/src/: main.cpp  main2.cpp
2024/18/part1/: CMakeLists.txt
2024/2/src/: main.cpp
2024/22/p2/: CMakeLists.txt
2024/3/src/: main.cpp
2024/5/src/: main.cpp
2024/7/src/: main2.cpp
2024/8/src/: main.cpp
2025/1/: main.c
2025/1/part1/: main.c
2025/1/part2/: main.c
2025/10/part1/: main.c
2025/11/part1/: main.c
2025/11/part2/: CMakeLists.txt
2025/2/: main.c
2025/2/part1/: main.c
2025/2/part2/: main.c
2025/3/part1/: main.c
2025/3/part2/: main.c
2025/4/part1/: main.c
2025/4/part2/: main.c
2025/5/part1/: main.c
2025/5/part2/: main.c
2025/6/part2/: main.c
2025/7/part1/: main.c
2025/7/part2/: main.c
2025/8/part1/: CMakeLists.txt
2025/8/part1/include/: heap.h  min_heap.h  vertex.h
2025/8/part1/src/: main.c
2025/8/part1/src/heap/: heap.c  min_heap.c
2025/9/part1/: main.c
23/p2_v2/: main.c
23/src/: BronKerbosch.h  main.cpp
4/src/: main.cpp
7/src/: main.cpp
(+45 files in other folders)
